--- a/coding/html/malaysian.html
+++ b/coding/html/malaysian.html
@@ -77,48 +77,104 @@
       </header>
       <section class="section">
         <div class="breadcrumbs">
-          <h2>My Cart</h2>
+          <h2 class="uppercase">Music</h2>
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">Home</li>
-            <li class="breadcrumbs__item">Cart</li>
+            <li class="breadcrumbs__item uppercase">Music</li>
           </ul>
         </div>
-        <div class="cart">
+        <div class="music">
           <div class="main-wrapper">
-            <div class="cart__wrapper">
-              <div class="cart__list">
-                <div class="cart__card">
-                  <div class="cart__card-wrapper">
-                    <div class="cart__img-wrapper"><img src="../images/item-product.png" alt="Item Product"></div>
-                    <div class="cart__text">
-                      <h3>Premium Box</h3>
-                      <p class="cart__text-h4">12 Month Pre-Paid Subscription</p>
-                      <p class="cart__text-second">12 Month Prepay</p>
-                    </div>
+            <div class="music__wrapper">
+              <div class="music__current">
+                <iframe src="https://www.youtube.com/embed/xdsqWCG2wxU?si=XQd8i23kp-K9md5b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="music__description"> 
+                  <h4>Malaysian Music</h4>
+                  <div class="music__description-wrapper">
+                    <div class="music__description-inside"><i class="music__icon music__icon--calendar"></i><span>Jun 25, 2008</span></div>
+                    <div class="music__description-inside"><i class="music__icon music__icon--clock"></i><span>4:13</span></div>
                   </div>
-                  <div class="cart__card-wrapper mt-[29px] tablet:mt-0 tablet:items-center">
-                    <p class="cart__price">$275.00</p>
-                    <div class="cart__icon-trash"></div>
+                </div>
+                <div class="music__lyrics">
+                  <h4>Lyrics</h4>
+                  <div class="mb-2">
+                    <p>Kucuba redakan relung hati</p>
+                    <p>Bayangmu yang berlalu pergi</p>
+                    <p>Terlukis di dalam kenangan</p>
+                    <p>Fa come vuole</p>
+                    <p>Bebas bermain di hatiku</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Dan cerita tentang masa lalu</p>
+                    <p>Cerita tentang kau dan aku</p>
+                    <p>Kini tinggal hanya kenangan</p>
+                    <p>Kau abadi dalam hatiku</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Harusnya takkan kubiarkan engkau pergi</p>
+                    <p>Membuatku terpuruk, rasa ingin mati</p>
+                    <p>Derita yang mendera, kapan akan berakhir?</p>
+                    <p>Hanya engkau yang mampu taklukkan hatiku</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Cerita tentang masa lalu</p>
+                    <p>Cerita tentang kau dan aku</p>
+                    <p>Kini tinggal hanya kenangan</p>
+                    <p>Kau abadi dalam hatiku</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Harusnya takkan kubiarkan engkau pergi</p>
+                    <p>Membuatku terpuruk, rasa ingin mati</p>
+                    <p>Derita yang mendera, kapan akan berakhir?</p>
+                    <p>Hanya engkau yang mampu taklukkan hatiku</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Ah, aku cinta, uh-wo-oh</p>
+                    <p>Ah, aku cinta, wo-wo-oh</p>
+                    <p>Ah, aku cinta, uh-wo-oh</p>
+                    <p>Ah, aku cinta, wo-wo-uh</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Hu-wo-wo-wo-wo-wo</p>
+                    <p>Uh-hu-hu-hu-uh</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Harusnya takkan kubiarkan engkau pergi</p>
+                    <p>Membuatku terpuruk, rasa ingin mati</p>
+                    <p>Derita yang mendera, kapan akan berakhir?</p>
+                    <p>Hanya engkau yang mampu taklukkan hatiku</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Ah, aku cinta, uh-wo-oh</p>
+                    <p>Ah, aku cinta, oh-wo-wo-wo</p>
+                    <p>Ah, aku cinta, uh-wo-wo-oh</p>
+                    <p>Ah, aku cinta, uh-uh</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Hu-ho-uh-ho</p>
+                    <p>Wo-ho, wo-ho-uh-oh-uh</p>
                   </div>
                 </div>
               </div>
-              <div class="cart__card cart__card--order">
-                <div class="cart__text">
-                  <h3>Order Total</h3>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Subtotal</p>
-                  <p class="cart__text-number">$275.00</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Est. Tax</p>
-                  <p class="cart__text-number">$23.72</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Total</p>
-                  <p class="cart__text-number">$298.72</p>
-                </div>
-                <button class="button button--secondary w-full">Checkout</button>
+              <div class="music__side">
+                <div class="music__side-item"><a href="taiwan.html"> 
+                    <iframe src="https://www.youtube.com/embed/videoseries?list=PLiwkmHKzRwO0kkm_0ma6FgZsi6XmNSjTV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h5>Taiwan Music / F4</h5></a></div>
+                <div class="music__side-item"><a href="phil.html"> 
+                    <iframe src="https://www.youtube.com/embed/E5Sgxp7K7BQ?si=7ttvQ_T1LQqGm1Oj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Philippines Music</h5></a></div>
+                <div class="music__side-item"><a href="peruvian.html"> 
+                    <iframe src="https://www.youtube.com/embed/QgxJiSSLX0k?si=oovUehOSneVZJx0s&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Peruvian Music</h5></a></div>
+                <div class="music__side-item"><a href="indo.html"> 
+                    <iframe src="https://www.youtube.com/embed/9II3OGZETo4?si=FVhLdVXq3-8EZb3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Indonesia Music</h5></a></div>
+                <div class="music__side-item"><a href="malaysia.html"> 
+                    <iframe src="https://www.youtube.com/embed/DDOs_6tRNqM?si=olrBj2O8Ah84Cu-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Malaysia Music</h5></a></div>
+                <div class="music__side-item"><a href="israel.html"> 
+                    <iframe src="https://www.youtube.com/embed/ckObp0fTNmU?si=emfmxZiUXzA9Apch" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Israel Music</h5></a></div>
               </div>
             </div>
           </div>
