--- a/coding/html/music.html
+++ b/coding/html/music.html
@@ -77,48 +77,86 @@
       </header>
       <section class="section">
         <div class="breadcrumbs">
-          <h2>My Cart</h2>
+          <h2 class="uppercase">Music</h2>
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">Home</li>
-            <li class="breadcrumbs__item">Cart</li>
+            <li class="breadcrumbs__item uppercase">Music</li>
           </ul>
         </div>
-        <div class="cart">
+        <div class="music">
           <div class="main-wrapper">
-            <div class="cart__wrapper">
-              <div class="cart__list">
-                <div class="cart__card">
-                  <div class="cart__card-wrapper">
-                    <div class="cart__img-wrapper"><img src="../images/item-product.png" alt="Item Product"></div>
-                    <div class="cart__text">
-                      <h3>Premium Box</h3>
-                      <p class="cart__text-h4">12 Month Pre-Paid Subscription</p>
-                      <p class="cart__text-second">12 Month Prepay</p>
-                    </div>
+            <div class="music__wrapper">
+              <div class="music__current">
+                <iframe src="https://www.youtube.com/embed/xdsqWCG2wxU?si=XQd8i23kp-K9md5b" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="music__description"> 
+                  <h4>Italy Music / Vivo</h4>
+                  <div class="music__description-wrapper">
+                    <div class="music__description-inside"><i class="music__icon music__icon--calendar"></i><span>Jan 14, 2021</span></div>
+                    <div class="music__description-inside"><i class="music__icon music__icon--clock"></i><span>4:53</span></div>
                   </div>
-                  <div class="cart__card-wrapper mt-[29px] tablet:mt-0 tablet:items-center">
-                    <p class="cart__price">$275.00</p>
-                    <div class="cart__icon-trash"></div>
+                </div>
+                <div class="music__lyrics">
+                  <h4>Lyrics</h4>
+                  <div class="mb-2">
+                    <p>Vivo</p>
+                    <p>Ma non ho scelta né un motivo</p>
+                    <p>Il mondo è un tipo irrazionale</p>
+                    <p>Fa come vuole</p>
+                    <p>Non dà nessuna spiegazione</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Ti conviene</p>
+                    <p>Cogliere il tempo che rimane</p>
+                    <p>Prima che smetta di bruciare</p>
+                    <p>Dentro al tuo cuore</p>
+                    <p>Anche il più piccolo ideale</p>
+                    <p>Che sta tremando di terrore</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Lo so bene</p>
+                    <p>La vita è breve e pure stretta</p>
+                    <p>Ma la tua mente è una gran sarta</p>
+                    <p>Che cuce in fretta</p>
+                    <p>Il tempo di una sigaretta</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Che fa bene</p>
+                    <p>A chi ha la luna maledetta</p>
+                    <p>E dalla vita non si aspetta</p>
+                    <p>Che sia perfetta</p>
+                    <p>Si gode quello che gli spetta</p>
+                    <p>Perché si muore troppo in fretta</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Tu lo sai che ti conviene</p>
+                    <p>Finger di non sapere</p>
+                    <p>Che il mondo è verticale e vai giù</p>
+                    <p>Insieme alla tua tempra morale</p>
+                    <p>Che teme di invecchiare</p>
+                    <p>E di dimenticare</p>
+                    <p>Come si cambia in fretta</p>
                   </div>
                 </div>
               </div>
-              <div class="cart__card cart__card--order">
-                <div class="cart__text">
-                  <h3>Order Total</h3>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Subtotal</p>
-                  <p class="cart__text-number">$275.00</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Est. Tax</p>
-                  <p class="cart__text-number">$23.72</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Total</p>
-                  <p class="cart__text-number">$298.72</p>
-                </div>
-                <button class="button button--secondary w-full">Checkout</button>
+              <div class="music__side">
+                <div class="music__side-item"><a href="taiwan.html"> 
+                    <iframe src="https://www.youtube.com/embed/videoseries?list=PLiwkmHKzRwO0kkm_0ma6FgZsi6XmNSjTV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h5>Taiwan Music / F4</h5></a></div>
+                <div class="music__side-item"><a href="phil.html"> 
+                    <iframe src="https://www.youtube.com/embed/E5Sgxp7K7BQ?si=7ttvQ_T1LQqGm1Oj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Philippines Music</h5></a></div>
+                <div class="music__side-item"><a href="peruvian.html"> 
+                    <iframe src="https://www.youtube.com/embed/QgxJiSSLX0k?si=oovUehOSneVZJx0s&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Peruvian Music</h5></a></div>
+                <div class="music__side-item"><a href="indo.html"> 
+                    <iframe src="https://www.youtube.com/embed/9II3OGZETo4?si=FVhLdVXq3-8EZb3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Indonesia Music</h5></a></div>
+                <div class="music__side-item"><a href="malaysian.html"> 
+                    <iframe src="https://www.youtube.com/embed/DDOs_6tRNqM?si=olrBj2O8Ah84Cu-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Malaysia Music</h5></a></div>
+                <div class="music__side-item"><a href="israel.html"> 
+                    <iframe src="https://www.youtube.com/embed/ckObp0fTNmU?si=emfmxZiUXzA9Apch" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Israel Music</h5></a></div>
               </div>
             </div>
           </div>
