--- a/coding/html/phil.html
+++ b/coding/html/phil.html
@@ -77,48 +77,115 @@
       </header>
       <section class="section">
         <div class="breadcrumbs">
-          <h2>My Cart</h2>
+          <h2 class="uppercase">Music</h2>
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">Home</li>
-            <li class="breadcrumbs__item">Cart</li>
+            <li class="breadcrumbs__item uppercase">Music</li>
           </ul>
         </div>
-        <div class="cart">
+        <div class="music">
           <div class="main-wrapper">
-            <div class="cart__wrapper">
-              <div class="cart__list">
-                <div class="cart__card">
-                  <div class="cart__card-wrapper">
-                    <div class="cart__img-wrapper"><img src="../images/item-product.png" alt="Item Product"></div>
-                    <div class="cart__text">
-                      <h3>Premium Box</h3>
-                      <p class="cart__text-h4">12 Month Pre-Paid Subscription</p>
-                      <p class="cart__text-second">12 Month Prepay</p>
-                    </div>
+            <div class="music__wrapper">
+              <div class="music__current">
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PLiwkmHKzRwO3QY89tqtGQlJL5DFxDEC7R" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="music__description"> 
+                  <h4>Philippines Music</h4>
+                  <div class="music__description-wrapper">
+                    <div class="music__description-inside"><i class="music__icon music__icon--calendar"></i><span>Sep 30, 2022</span></div>
+                    <div class="music__description-inside"><i class="music__icon music__icon--clock"></i><span>3:49</span></div>
                   </div>
-                  <div class="cart__card-wrapper mt-[29px] tablet:mt-0 tablet:items-center">
-                    <p class="cart__price">$275.00</p>
-                    <div class="cart__icon-trash"></div>
+                </div>
+                <div class="music__lyrics">
+                  <h4>Lyrics</h4>
+                  <div class="mb-2">
+                    <p>Hindi naman inaakalang</p>
+                    <p>Ikaw pala ang makakasama</p>
+                    <p>Ang hanap ko noon</p>
+                    <p>Ibang iba sa ngayon</p>
+                    <p>Ika'y dumating, sa tamang panahon</p>
+                    <p>Ikaw na ba yung dinalangin ko</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Handa kong gawin ang lahat</p>
+                    <p>Makapiling ka lang</p>
+                    <p>Walang hihigit Sa iyo</p>
+                    <p>Ikutin pa ang mundo</p>
+                    <p>Ako'y babalik babalik sayo</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Tanging ikaw ang sigaw</p>
+                    <p>Ng puso araw araw</p>
+                    <p>Aminin ko na sayo,</p>
+                    <p>Ngayon lang nagka gan'to</p>
+                    <p>Ako'y babalik babalik babalik parin sayo</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Sino ba ang magaakalang</p>
+                    <p>Mabibigyan ako ng pag-asa</p>
+                    <p>Labas sa liga ko</p>
+                    <p>Isang katulad mo</p>
+                    <p>Ngunit nang dumating, napatanong ako</p>
+                    <p>Ikaw na ba yung pinangarap ko</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Handa kong gawin ang lahat</p>
+                    <p>Makapiling ka lang</p>
+                    <p>Walang hihigit sa iyo</p>
+                    <p>Ikutin pa ang mundo</p>
+                    <p>Ako'y babalik babalik sayo</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Tanging ikaw ang sigaw</p>
+                    <p>Ng puso araw araw</p>
+                    <p>Aminin ko na sayo,</p>
+                    <p>Ngayon lang nagka gan'to</p>
+                    <p>Ako'y babalik babalik babalik parin sayo</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Oh, oh, oh</p>
+                    <p>Oh, oh, oh</p>
+                    <p>Ba ba da ba da ba ba...</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Handa kong gawin ang lahat</p>
+                    <p>Makapiling ka lang</p>
+                    <p>Walang hihigit sa iyo</p>
+                    <p>Ikutin pa ang mundo</p>
+                    <p>Ako'y babalik babalik sayo</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Tanging ikaw ang sigaw</p>
+                    <p>Ng puso araw araw</p>
+                    <p>Aminin ko na sayo,</p>
+                    <p>Ngayon lang nagka gan'to</p>
+                    <p>Ako'y babalik babalik sayo</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>Oh, oh, oh</p>
+                    <p>Oh, oh, oh</p>
+                    <p>Ba ba da ba da ba ba...</p>
                   </div>
                 </div>
               </div>
-              <div class="cart__card cart__card--order">
-                <div class="cart__text">
-                  <h3>Order Total</h3>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Subtotal</p>
-                  <p class="cart__text-number">$275.00</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Est. Tax</p>
-                  <p class="cart__text-number">$23.72</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Total</p>
-                  <p class="cart__text-number">$298.72</p>
-                </div>
-                <button class="button button--secondary w-full">Checkout</button>
+              <div class="music__side">
+                <div class="music__side-item"><a href="taiwan.html"> 
+                    <iframe src="https://www.youtube.com/embed/videoseries?list=PLiwkmHKzRwO0kkm_0ma6FgZsi6XmNSjTV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h5>Taiwan Music / F4</h5></a></div>
+                <div class="music__side-item"><a href="music.html"> 
+                    <iframe src="https://www.youtube.com/embed/xdsqWCG2wxU?si=KuixC5ofF97HBil8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Italy Music</h5></a></div>
+                <div class="music__side-item"><a href="peruvian.html"> 
+                    <iframe src="https://www.youtube.com/embed/QgxJiSSLX0k?si=oovUehOSneVZJx0s&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Peruvian Music</h5></a></div>
+                <div class="music__side-item"><a href="indo.html"> 
+                    <iframe src="https://www.youtube.com/embed/9II3OGZETo4?si=FVhLdVXq3-8EZb3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Indonesia Music</h5></a></div>
+                <div class="music__side-item"><a href="malaysia.html"> 
+                    <iframe src="https://www.youtube.com/embed/DDOs_6tRNqM?si=olrBj2O8Ah84Cu-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Malaysia Music</h5></a></div>
+                <div class="music__side-item"><a href="israel.html"> 
+                    <iframe src="https://www.youtube.com/embed/ckObp0fTNmU?si=emfmxZiUXzA9Apch" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Israel Music</h5></a></div>
               </div>
             </div>
           </div>
