--- a/coding/html/subscribe.html
+++ b/coding/html/subscribe.html
@@ -76,65 +76,75 @@
         </div>
       </header>
       <section class="section">
-        <div class="breadcrumbs breadcrumbs--w-img"><img src="../images/giftboyy.png" alt="Delivery Boy">
-          <h2>Give A Gift</h2>
+        <div class="breadcrumbs">
+          <h2>Subscribe</h2>
         </div>
         <div class="gift">
-          <div class="main-wrapper main-wrapper--gift">
+          <div class="main-wrapper main-wrapper--subscribe">
             <div class="gift__wrapper">
-              <h2>Select A Size</h2>
-              <div class="gift__item">
-                <div class="gift__item-wrapper">
-                  <div class="gift__img"><img src="../images/standardbox.png" alt="Treatbox Standard"></div>
-                  <div class="gift__details">
-                    <div class="gift__header">
-                      <h3>Standard Box</h3>
-                      <p>As low as $14.95 per box!</p>
-                    </div>
-                    <div class="gift__list">
-                      <div class="gift__row"><img src="../images/gift-icon1.png" alt="Cookies Icon">
-                        <p>5+ international snacks delivered each month</p>
+              <h2>Select Your Plan</h2>
+              <div class="gift__item-list gift__item-list--subscribe">
+                <div class="gift__item">
+                  <div class="gift__header gift__header--pc">
+                    <h3>Standard Box</h3>
+                    <p>As low as $14.95 per box!</p>
+                  </div>
+                  <div class="gift__item-wrapper">
+                    <div class="gift__img"><img src="../images/standardbox.png" alt="Treatbox Standard"></div>
+                    <div class="gift__details">
+                      <div class="gift__header gift__header--sp">
+                        <h3>Standard Box</h3>
+                        <p>As low as $14.95 per box!</p>
                       </div>
-                      <div class="gift__row"><img src="../images/gift-icon2.png" alt="Fruit Icon">
-                        <p>Try a new country every month</p>
-                      </div>
-                      <div class="gift__row"><img src="../images/gift-icon3.png" alt="Box Icon">
-                        <p>Receive your first box within a week of your order</p>
-                      </div>
-                      <div class="gift__row"><img src="../images/gift-icon4.png" alt="Earth Plane Travel Icon">
-                        <p>Shipping is free for addresses in the United States. Shipping fees will apply for addresses outside of the United States.</p>
+                      <div class="gift__list">
+                        <div class="gift__row"><img src="../images/gift-icon1.png" alt="Cookies Icon">
+                          <p>5+ international snacks delivered each month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon2.png" alt="Fruit Icon">
+                          <p>Try a new country every month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon3.png" alt="Box Icon">
+                          <p>Receive your first box within a week of your order</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon4.png" alt="Earth Plane Travel Icon">
+                          <p>Shipping is free for addresses in the United States. Shipping fees will apply for addresses outside of the United States.</p>
+                        </div>
                       </div>
                     </div>
                   </div>
+                  <button class="button button--secondary w-full">Subscribe Box</button>
                 </div>
-                <button class="button button--secondary w-full">Subscribe Box</button>
-              </div>
-              <div class="gift__item">
-                <p class="gift__best-value">Best Value!</p>
-                <div class="gift__item-wrapper">
-                  <div class="gift__img"><img src="../images/premiumbox.png" alt="Treatbox Premium"></div>
-                  <div class="gift__details">
-                    <div class="gift__header">
-                      <h3>Standard Box</h3>
-                      <p>As low as $25.95 per box!</p>
-                    </div>
-                    <div class="gift__list">
-                      <div class="gift__row"><img src="../images/gift-icon1.png" alt="Cookies Icon">
-                        <p>10+ international snacks delivered each month</p>
+                <div class="gift__item">
+                  <p class="gift__best-value">Best Value!</p>
+                  <div class="gift__header gift__header--pc">
+                    <h3>Premium Box</h3>
+                    <p>As low as $25.95 per box!</p>
+                  </div>
+                  <div class="gift__item-wrapper">
+                    <div class="gift__img"><img class="gift-pc" src="../images/premiumbox.png" alt="Treatbox Premium"></div>
+                    <div class="gift__details">
+                      <div class="gift__header gift__header--sp">
+                        <h3>Premium Box</h3>
+                        <p>As low as $25.95 per box!</p>
                       </div>
-                      <div class="gift__row"><img src="../images/gift-icon2.png" alt="Fruit Icon">
-                        <p>Try a new country every month</p>
-                      </div>
-                      <div class="gift__row"><img src="../images/gift-icon3.png" alt="Box Icon">
-                        <p>Receive your first box within a week of your order</p>
-                      </div>
-                      <div class="gift__row"><img src="../images/gift-icon4.png" alt="Earth Plane Travel Icon">
-                        <p>Shipping is free for addresses in the United States. Shipping fees will apply for addresses outside of the United States.</p>
+                      <div class="gift__list">
+                        <div class="gift__row"><img src="../images/gift-icon1.png" alt="Cookies Icon">
+                          <p>10+ international snacks delivered each month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon2.png" alt="Fruit Icon">
+                          <p>Try a new country every month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon3.png" alt="Box Icon">
+                          <p>Receive your first box within a week of your order</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon4.png" alt="Earth Plane Travel Icon">
+                          <p>Shipping is free for addresses in the United States. Shipping fees will apply for addresses outside of the United States.</p>
+                        </div>
                       </div>
                     </div>
                   </div>
+                  <button class="button button--secondary w-full">Subscribe Box</button>
                 </div>
-                <button class="button button--secondary w-full">Subscribe Box</button>
               </div>
             </div>
           </div>
