--- a/coding/html/taiwan.html
+++ b/coding/html/taiwan.html
@@ -77,48 +77,107 @@
       </header>
       <section class="section">
         <div class="breadcrumbs">
-          <h2>My Cart</h2>
+          <h2 class="uppercase">Music</h2>
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">Home</li>
-            <li class="breadcrumbs__item">Cart</li>
+            <li class="breadcrumbs__item uppercase">Music</li>
           </ul>
         </div>
-        <div class="cart">
+        <div class="music">
           <div class="main-wrapper">
-            <div class="cart__wrapper">
-              <div class="cart__list">
-                <div class="cart__card">
-                  <div class="cart__card-wrapper">
-                    <div class="cart__img-wrapper"><img src="../images/item-product.png" alt="Item Product"></div>
-                    <div class="cart__text">
-                      <h3>Premium Box</h3>
-                      <p class="cart__text-h4">12 Month Pre-Paid Subscription</p>
-                      <p class="cart__text-second">12 Month Prepay</p>
-                    </div>
+            <div class="music__wrapper">
+              <div class="music__current">
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PLiwkmHKzRwO0kkm_0ma6FgZsi6XmNSjTV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="music__description"> 
+                  <h4>Taiwan Music / F4</h4>
+                  <div class="music__description-wrapper">
+                    <div class="music__description-inside"><i class="music__icon music__icon--calendar"></i><span>Aug 28, 2001</span></div>
+                    <div class="music__description-inside"><i class="music__icon music__icon--clock"></i><span>4:32</span></div>
                   </div>
-                  <div class="cart__card-wrapper mt-[29px] tablet:mt-0 tablet:items-center">
-                    <p class="cart__price">$275.00</p>
-                    <div class="cart__icon-trash"></div>
+                </div>
+                <div class="music__lyrics">
+                  <h4>Lyrics</h4>
+                  <div class="mb-2">
+                    <p>Wēnróu de xīngkōng</p>
+                    <p>yīnggāi ràng nǐ gǎndòng</p>
+                    <p>wǒ zài nǐ shēn páng</p>
+                    <p>wèi nǐ bùzhì yīpiàn tiānkōng</p>
+                    <p>bù zhǔn nǐ nánguò</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>tì nǐ bǎipíng jìmò</p>
+                    <p>mèngxiǎng de zhòngliàng</p>
+                    <p>quánbù dōu jiāo gěi wǒ</p>
+                    <p>qiān nǐ shǒu</p>
+                    <p>gēnzhe wǒ zǒu</p>
+                    <p>Fēng zài dà yòu zěnyàng</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>nǐ yǒule wǒ</p>
+                    <p>zài yě bù huì mílù fāngxiàng</p>
+                    <p>péi nǐ qù kàn liúxīngyǔ luò zài zhè dìqiú shàng</p>
+                    <p>ràng nǐ de lèi luò zài wǒ jiānbǎng</p>
+                    <p>yào nǐ xiāngxìn wǒ de ài zhǐ kěn wèi nǐ yǒnggǎn</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>nǐ huì kànjiàn xìngfú de suǒzài</p>
+                    <p>shānggǎn ruò tài duō</p>
+                    <p>xīn diū gěi wǒ bǎohù</p>
+                    <p>píjuàn de yānhuǒ</p>
+                    <p>Wǒ huì tì nǐ dōu gǎn zǒu</p>
+                    <p>cànlàn de yányǔ</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>zhǐ néng diǎnzhuì gǎnqíng</p>
+                    <p>rúguǒ wǒ chénmò</p>
+                    <p>yīnwèi wǒ zhēn de ài nǐ</p>
+                    <p>zhūxiàotiān: Qiān nǐ shǒu gēnzhe wǒ zǒu</p>
+                    <p>fēng zài dà yòu zěnyàng</p>
+                    <p>nǐ yǒule wǒ zài yě bù huì mílù fāngxiàng</p>
+                    <p>péi nǐ qù kàn liúxīngyǔ luò zài zhè dìqiú shàng</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>ràng nǐ de lèi luò zài wǒ jiānbǎng</p>
+                    <p>Yào nǐ xiāngxìn wǒ de ài zhǐ kěn wèi nǐ yǒnggǎn</p>
+                    <p>nǐ huì kànjiàn xìngfú de suǒzài</p>
+                    <p>yǔ hé yún jiànjiàn sàn kāi</p>
+                    <p>sǎ xià yīpiàn wēnnuǎn</p>
+                    <p>wǒ yào fēnxiǎng nǐ yǎnzhōng de lèi guāng</p>
+                    <p>péi nǐ qù kàn liúxīngyǔ luò zài zhè dìqiú shàng</p>
+                  </div>
+                  <div class="mb-2"> 
+                    <p>ràng nǐ de lèi luò zài wǒ jiānbǎng</p>
+                    <p>yào nǐ xiāngxìn wǒ de ài zhǐ kěn wèi nǐ yǒnggǎn</p>
+                    <p>nǐ huì kànjiàn xìngfú de suǒzài</p>
+                    <p>péi nǐ qù kàn liúxīngyǔ luò zài zhè dìqiú shàng</p>
+                    <p>Ràng nǐ de lèi luò zài wǒ jiānbǎng</p>
+                    <p>yào nǐ xiāngxìn wǒ de ài zhǐ kěn wèi nǐ yǒnggǎn</p>
+                    <p>nǐ huì kànjiàn</p>
+                    <p>xìngfú de suǒzài</p>
+                    <p>nǐ huì kànjiàn</p>
+                    <p>xìngfú de suǒzài</p>
                   </div>
                 </div>
               </div>
-              <div class="cart__card cart__card--order">
-                <div class="cart__text">
-                  <h3>Order Total</h3>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Subtotal</p>
-                  <p class="cart__text-number">$275.00</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Est. Tax</p>
-                  <p class="cart__text-number">$23.72</p>
-                </div>
-                <div class="cart__card-wrapper">
-                  <p class="cart__text-order">Total</p>
-                  <p class="cart__text-number">$298.72</p>
-                </div>
-                <button class="button button--secondary w-full">Checkout</button>
+              <div class="music__side">
+                <div class="music__side-item"><a href="music.html"> 
+                    <iframe src="https://www.youtube.com/embed/xdsqWCG2wxU?si=KuixC5ofF97HBil8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <h5>Italy Music</h5></a></div>
+                <div class="music__side-item"><a href="phil.html"> 
+                    <iframe src="https://www.youtube.com/embed/E5Sgxp7K7BQ?si=7ttvQ_T1LQqGm1Oj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Philippines Music</h5></a></div>
+                <div class="music__side-item"><a href="#"> 
+                    <iframe src="https://www.youtube.com/embed/QgxJiSSLX0k?si=oovUehOSneVZJx0s&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Peruvian Music</h5></a></div>
+                <div class="music__side-item"><a href="#"> 
+                    <iframe src="https://www.youtube.com/embed/9II3OGZETo4?si=FVhLdVXq3-8EZb3M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Indonesia Music</h5></a></div>
+                <div class="music__side-item"><a href="#"> 
+                    <iframe src="https://www.youtube.com/embed/DDOs_6tRNqM?si=olrBj2O8Ah84Cu-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Malaysia Music</h5></a></div>
+                <div class="music__side-item"><a href="#"> 
+                    <iframe src="https://www.youtube.com/embed/ckObp0fTNmU?si=emfmxZiUXzA9Apch" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h5>Israel Music</h5></a></div>
               </div>
             </div>
           </div>
