--- a/coding/html/mypage.html
+++ b/coding/html/mypage.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&amp;family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/slick.min.css">
     <link rel="stylesheet" href="../css/slick-theme.min.css">
+    <link rel="stylesheet" href="../css/slick.min.css">
+    <link rel="stylesheet" href="../css/slick-theme.min.css">
     <link rel="stylesheet" href="../css/animations-ie-fix.min.css">
     <link rel="stylesheet" href="../css/animations.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -98,7 +100,7 @@
                 <div class="featured__logo-wrapper">
                   <ul class="featured__logos">
                     <li class="featured__logo"><img src="../images/business-insider.png" alt="Business Insider"></li>
-                    <li class="featured__logo"><img src="../images/Travel_+_Leisure_Co.png" alt="Travel Leisure"></li>
+                    <li class="featured__logo"><img src="../images/TravelLeaisure.png" alt="Travel Leisure"></li>
                     <li class="featured__logo"><img src="../images/New-York-Times-logo.png" alt="The New York Times"></li>
                     <li class="featured__logo"><img src="../images/cnbc.png" alt="CNBC"></li>
                     <li class="featured__logo"><img src="../images/thrillist-logo.png" alt="Thrillist"></li>
@@ -292,7 +294,7 @@
                   <li class="footer__items"><a href="#">FAQ </a></li>
                   <li class="footer__items"><a href="#">Terms </a></li>
                   <li class="footer__items"><a href="#">Privacy </a></li>
-                  <li class="footer__items"><a href="#">Contact </a></li>
+                  <li class="footer__items"><a href="contact-us.html">Contact </a></li>
                   <li class="footer__items"><a href="#">Sponsorship </a></li>
                   <li class="footer__items"><a href="#">Music</a></li>
                 </ul>
@@ -316,7 +318,9 @@
   </body>
   <script src="../js/index.js"></script>
   <script src="../js/carousel-list.js"></script>
-  <script src="../js/carousel.js"></script>
   <script src="../js/css3-animate-it.js"></script>
   <script src="../js/accordion.js"></script>
+  <script src="../js/carousel.js"></script>
+  <script src="../js/smtp.js"></script>
+  <script src="../js/email.js"></script>
 </html>
