--- a/coding/html/product.html
+++ b/coding/html/product.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&amp;family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/slick.min.css">
     <link rel="stylesheet" href="../css/slick-theme.min.css">
+    <link rel="stylesheet" href="../css/slick.min.css">
+    <link rel="stylesheet" href="../css/slick-theme.min.css">
     <link rel="stylesheet" href="../css/animations-ie-fix.min.css">
     <link rel="stylesheet" href="../css/animations.min.css">
     <link rel="stylesheet" href="../css/style.css">
@@ -181,7 +183,128 @@
                       <p>Philippines Brand</p>
                     </div>
                   </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
+              <li class="product__item"><a class="product__link" href="#">
+                  <div class="product__card">
+                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
+                    <div class="product__header">
+                      <h3>Dried Mango</h3>
+                      <p>Philippines Brand</p>
+                    </div>
+                  </div></a></li>
             </ul>
+            <div class="product__show-more"><span id="next">Show More</span></div>
           </div>
         </div>
       </section>
@@ -209,7 +332,7 @@
                   <li class="footer__items"><a href="#">FAQ </a></li>
                   <li class="footer__items"><a href="#">Terms </a></li>
                   <li class="footer__items"><a href="#">Privacy </a></li>
-                  <li class="footer__items"><a href="#">Contact </a></li>
+                  <li class="footer__items"><a href="contact-us.html">Contact </a></li>
                   <li class="footer__items"><a href="#">Sponsorship </a></li>
                   <li class="footer__items"><a href="#">Music</a></li>
                 </ul>
@@ -231,9 +354,12 @@
       </footer>
     </main>
   </body>
+  <script src="../js/showmore.js"></script>
   <script src="../js/index.js"></script>
   <script src="../js/carousel-list.js"></script>
-  <script src="../js/carousel.js"></script>
   <script src="../js/css3-animate-it.js"></script>
   <script src="../js/accordion.js"></script>
+  <script src="../js/carousel.js"></script>
+  <script src="../js/smtp.js"></script>
+  <script src="../js/email.js"></script>
 </html>
